--- a/style.css
+++ b/style.css
@@ -1,7 +1,360 @@
+:root{
+  /* color */
 
+  --very-dark-desaturated-blue: hsl(212, 27%, 19%);
+  --very-dark-greyish-blue: hsl(213, 9%, 39%);
+  --dark-desaturated-cyan: hsl(167, 48%, 24%);
+  --dark-moderate-cyan: hsl(168, 34%, 41%);
+  --middle-blue-green: hsl(167, 44%, 70%);
+  --dark-greyish-blue: hsl(232, 10%, 55%);
+  --greyish-blue: hsl(210, 4%, 67%);
+  --olive-drab-7: hsl(54, 96%, 10%);
+  --dark-blue: hsl(198, 62%, 26%);
+  --soft-red: hsl(7, 99%, 79%);
+  --yellow: hsl(51, 100%, 49%);
+  --white: hsl(0, 0%, 100%);
+  --snow: hsl(26, 100%, 99%);
+  
+/* others */
+--default-transition:0.25s ease ;
 
-*{
+}
+
+/* reset */
+*, *::before, *::after{
   margin:0;
   padding:0;
   box-sizing:border-box;
+
+}
+
+li{
+  list-style-type:none
+}
+a{
+  text-decoration:none;
+  font:inherit;
+}
+
+button{
+  font:inherit;
+  background: none;
+  border: none;
+  cursor: pointer;
+  }
+
+  span, img, ion-icon{
+    display:block;
+  }
+
+html{
+  font-family: 'Barlow',
+  sans-serif;
+  font-size: 18px;
+  scroll-behavior: smooth;
+  }
+
+h1,
+h2,
+h3,
+h4,
+.btn ,
+.about-link {
+  font-family: 'Fraunces',
+  serif;
+  font-weight: 900;
+}
+
+.container {
+  background:var(--snow);
+  max-width:1440px;
+  margin: auto;
+  position:relative;
+  overflow:hidden;
+  /* min-height: 100vh; */
+}
+
+/* header */
+
+header {
+  position:absolute;
+  top:0;
+  left:0;
+  width:100%;
+  z-index:20;
+  /* background: hsl(200,100%,62%); */
+}
+
+.navbar{
+  position: relative;
+  display:flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 30px 25px;
+
+}
+
+.navbar-nav{
+  background: var(--white);
+  position: absolute;
+  top: calc(100% + 25px);
+  left: 25px;
+  right: 25px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 35px;
+  padding: 40px;
+  box-shadow: 0 10px 40px hsla(0, 0%, 0%, 0.1);
+  transform: scale(0.9);
+  transform-origin: top-right;
+  opacity: 0;
+  pointer-events: none;
+  transition: var(--default-transition);
+}
+
+.navbar-nav.active{
+  transform: scale(1);
+  opacity: 1;
+  pointer-events: all;
+
+}
+.navbar-nav::before{
+  content: '';
+  position: absolute;
+  top: -19px;
+  right: -20px;
+  border: 20px solid transparent;
+  border-left-color: var(--white);
+  transform: rotate(45deg);
+}
+
+.nav-link{
+  color: var(--dark-greyish-blue);
+}
+
+.btn{
+  background: var(--yellow);
+  color: var(--olive-drab-7);
+  font-size: 16px;
+  text-transform: uppercase;
+  padding: 18px 30px;
+  border-radius: 50px;
+}
+
+.nav-toggle-btn{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 24px;
+  width: 24px;
+  gap:6px;
+}
+
+.nav-toggle-btn .line{
+  background: var(--white);
+  width: 100%;
+  height:2px;
+  transition: var(--default-transition);
+}
+
+.nav-toggle-btn.active .one{
+  transform: translateY(4px) rotate(45deg);
+}
+
+.nav-toggle-btn.active .two{
+  display: none;
+  
+}
+
+.nav-toggle-btn.active .three{
+  transform: translateY(-4px) rotate(-45deg);
+}
+
+
+/* home */
+
+.home{
+  position: relative;
+  overflow: hidden;
+  height: 540px;
+
+}
+
+.home-banner{
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  object-position: bottom;
+  
+}
+
+.home-absolute-content{
+  position: absolute;
+  top:50%; 
+  left:25px;
+  right: 25px;
+  transform: translateY(-50%);
+  text-align: center; 
+}
+
+.main-heading{
+  color: var(--white);
+  font-size: 40px;
+  text-transform: uppercase;
+  letter-spacing: 7px;
+  margin-bottom: 50px;
+}
+
+.arrow-down{
+  display: inline-block;
+  animation: jump-down 2s ease infinite;
+}
+
+@keyframes jump-down{
+  0%,
+  50%,
+  100%{
+    transform: translateY(0);
+  }
+  12.5%,
+  37.5%{
+    transform: translateY(20px);
+  }
+  25% {
+    transform: translateY(10px);
+  }
+
+}
+
+/* about */
+
+.about{
+  display: grid;
+  grid-template-columns: 1fr;
+}
+
+.about-img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.about-content{
+  padding: 60px 25px;
+  text-align: center;
+  max-width: 550px;
+  margin: auto;
+}
+
+.about-h2{
+  color:var(--very-dark-desaturated-blue);
+  font-size: 32px;
+  margin-bottom: 30px;
+}
+
+.about-p {
+  color: var(--dark-greyish-blue);
+  line-height: 1.7;
+  margin-bottom: 30px;
+}
+
+.about-link{
+  position: relative;
+  color: var(--very-dark-desaturated-blue);
+  font-size: 16px;
+  text-transform: uppercase;
+  z-index: 1;
+}
+
+.about-link::after{
+  content : "";
+  position: absolute;
+  top:100%;
+  left: 50%;
+  transform: translate(-50%, -8px);
+  background: var(--yellow);
+  width: calc(100% + 20px);
+  height: 10px;
+  border-radius: 10px;
+  opacity: 0.3;
+  z-index: -1;
+  transition: var(--default-transition);
+}
+
+.about-link:hover ::after{
+  opacity: 1;
+}
+
+.pink::after{
+  background: var(--soft-red);
+}
+
+/* services */
+
+.services{
+  display: grid;
+  grid-template-columns:1fr;
+}
+
+.service-box {
+  position: relative;
+}
+
+.service-box .img-box{
+  height: 600px;
+  overflow: hidden;
+}
+
+.service-img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+/* .service-absolute-content{
+  position: absolute;
+  top: 50%;
+  left: 25px;
+  transform: translateY(-50%);
+  text-align: center;
+  width: 100%;
+  max-width: 380px;
+  padding: 20px;
+
+} */
+/* .service-absolute-content{
+  position: absolute;
+   */
+  /* bottom: 20px;  */
+  /* left: 50%; */
+  /* right: 25px; */
+  /* transform: translateX(-50%);
+  text-align: center;
+  width: 100%;
+  max-width: 380px;
+  padding: 20px;
+} */ 
+/* .service-absolute-content{
+  position: absolute;
+  
+  
+   
+  
+  
+  
+}   */
+
+.service-h3{
+  font-size: 20px;
+  margin-bottom: 30px;
+  text-transform: capitalize;
+}
+
+.service-p {
+  /* color: var(--dark-greyish-blue); */
+  font-size: 16px;
+  line-height: 1.7;
+  
 }
